--- a/P009453.opf/meta.yml
+++ b/P009453.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W22167
   title: མི་ཕམ་མཁས་འཇུག
   author: ''
-  volumes: {}
+  volumes:
+    c91adad143544290a99d5c74ddc39a15:
+      image_group_id: I1KG10374
+      title: ''
+      volume_number: 1
+      total_pages: 460
