--- a/P009453.opf/layers/v001/Pagination.yml
+++ b/P009453.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: cc95eb9bd24543e7bbb9dcb1fc0e574e
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   eef3664c9fc24c9d9c11d161109c16e3:
